(lang dune 3.10)

(name proofchat)

(generate_opam_files true)

(source
 (github CharlesAverill/proofchat))

(authors "Charles Averill")

(maintainers "Charles Averill")

(license ../LICENSE)

(documentation https://charlesaverill.github.io/proofchat/toc.html)

(package
 (name proofchat)
 (synopsis "A verified TCP client/server chat application")
 (description "This project contains a verified TCP client/server chat application written in
  Coq, extracted to OCaml. All networking is accomplished through
  the builtin OCaml Unix library.")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
